<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="8dp"
        android:orientation="vertical"
        android:paddingRight="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android:android.support.v7.widget.CardView
            android:id="@+id/card_travel_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:layout_marginBottom="8dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="true"
            card_view:contentPadding="4dp"
            card_view:cardCornerRadius="0dp">

            <TableLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <TableRow>
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:text="@string/label_travel_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/label_ticket_name"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="36dp"
                        android:layout_column="0"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/travel_ticket_name"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="2"/>
                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/label_passenger_name"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="36dp"
                        android:layout_column="0"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/travel_passenger_name"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="2"/>
                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/label_travel_class"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="36dp"
                        android:layout_column="0"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/travel_class"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="2"/>
                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/label_outward_trip"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="36dp"
                        android:layout_column="0"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/travel_outward"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="2"/>
                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/label_return_trip"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="36dp"
                        android:layout_column="0"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/travel_return"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="2"/>
                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/label_price"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="36dp"
                        android:layout_column="0"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/travel_price"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="2"/>
                </TableRow>

            </TableLayout>
        </android:android.support.v7.widget.CardView>

        <android:android.support.v7.widget.CardView
            android:id="@+id/card_ticket_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:layout_marginBottom="8dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="true"
            card_view:contentPadding="4dp"
            card_view:cardCornerRadius="0dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <TableRow>
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:text="@string/label_ticket_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </TableRow>
                <TableRow
                    android:layout_height="36dp">
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/label_order_number"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="36dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/text_order_number"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="2"/>
                </TableRow>
                <TableRow
                    android:layout_height="36dp">
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/label_creation"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="36dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/text_barcode_creation"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="2"/>
                </TableRow>
                <TableRow
                    android:layout_height="36dp">
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/label_languages"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="36dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/text_languages"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="2"/>
                </TableRow>
                <!--<TableRow-->
                    <!--android:layout_height="36dp">-->
                    <!--<TextView-->
                        <!--style="@style/Base.TextAppearance.AppCompat.Small"-->
                        <!--android:text="@string/label_ticket_flags"-->
                        <!--android:textStyle="bold"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:layout_height="36dp"-->
                        <!--android:layout_weight="1"/>-->
                    <!--<TextView-->
                        <!--android:id="@+id/text_ticket_flags"-->
                        <!--style="@style/Base.TextAppearance.AppCompat.Small"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_column="1"-->
                        <!--android:layout_weight="2"/>-->
                <!--</TableRow>-->
            </TableLayout>

        </android:android.support.v7.widget.CardView>

    <android:android.support.v7.widget.CardView
        android:id="@+id/card_barcode_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_marginBottom="8dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardPreventCornerOverlap="true"
        card_view:contentPadding="4dp"
        card_view:cardCornerRadius="0dp">

        <TableLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TableRow>
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/label_barcode_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/label_carrier"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_height="36dp"
                    android:layout_column="0"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/barcode_carrier"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow
                android:layout_height="36dp">
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/label_key_code"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="36dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/barcode_signature_id"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow
                android:layout_height="36dp">
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/label_signature_valid"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_height="36dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/barcode_signature_valid"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/label_not_implemented"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="2"/>
            </TableRow>
        </TableLayout>
    </android:android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>